MDEV-10352 Server crashes in Field::set_default on CREATE TABLE

fix Item_default_value not to pretend being const_item
if the field's default_value expression isn't parsed yet